# app_camera

./: README.md  meson.build
app/: AglShellGrpcClient.cpp  main.cpp  meson.build
